--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "dependencies": {
     "execa": "^4.0.0",
     "is-jpg": "^2.0.0",
-    "mozjpeg": "^7.0.0"
+    "mozjpeg": "7.1.0"
   },
   "devDependencies": {
     "ava": "^3.8.0",
